unpackaged/objects/BLND_DFAC_Shared_View__c.object
<CustomObject>
	<fields>
		<fullName>BLND_Application__c</fullName>
		<label>Application</label>
		<type>TextArea</type>
	</fields>
	<fields>
		<fullName>BLND_Data__c</fullName>
		<label>Data</label>
		<length>32000</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>BLND_Description__c</fullName>
		<label>Description</label>
		<type>TextArea</type>
	</fields>
	<fields>
		<fullName>BLND_Expansion__c</fullName>
		<label>Expansion</label>
		<length>32000</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>BLND_Extra_Field__c</fullName>
		<label>Extra Field</label>
		<type>TextArea</type>
	</fields>
	<fields>
		<fullName>BLND_Owner__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Owner</label>
		<referenceTo>User</referenceTo>
		<relationshipName>R00N30000002PYjhEAG</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>BLND_Private__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Private</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>BLND_Version__c</fullName>
		<label>Version</label>
		<precision>4</precision>
		<scale>2</scale>
		<type>Number</type>
	</fields>
	<label>DreamFactory Shared View</label>
	<nameField>
		<label>Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>DreamFactory Shared Views</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>